[project]
name = "pythonProject"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yassin Nouh", email = "70436855+YassinNouh21@users.noreply.github.com"},
]
dependencies = [
    "streamlit>=1.36.0",
    "requests>=2.32.3",
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "versioneer>=0.29",
    "orjson>=3.10.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
